Fix overflow problem for widget

--- a/stylesheets/perseus-admin-package/editor.less
+++ b/stylesheets/perseus-admin-package/editor.less
@@ -131,7 +131,6 @@
 .perseus-widget-editor {
     border: @editorBorder;
     border-radius: 5px;
-    overflow: hidden;
     margin-top: 10px;
 
     .perseus-widget-editor-title {
@@ -153,7 +152,6 @@
         border-top: @editorBorder;
         padding: @editorPadding;
         transition: all 0s;
-        overflow: hidden;
 
         // TODO(merlob) Make accordion
         &.enter {}
